lapis.css
/* ... */
/*
 * Table
 */
#write table {
    display: table;
    text-align: justify;
    overflow-x: auto;
    border-collapse: collapse;
    border-spacing: 0px;
    font-size: 1em;
    margin: 0px 0px 20px;
    width: 100%;
}

#write tbody {
    border: 0;
}

#write table tr {
    border: 0;
    border-top: 1px solid #ccc;
}

#write table tr th,
#write table tr td {
    font-size: 1rem;
    border: 1px solid #d9dfe4;
    padding: 5px 10px;
    text-align: justify;
}

#write table tr th {
    font-family: SourceHanSerifCN;
    text-align: center;
    min-width: 10rem;
    font-weight: bold;
    color: var(--primary-color);
}

#write table tr td:hover,
#write table tr th:hover {
    background-color: var(--block-bg-color);
}

table td {
    min-width: 32px;
}

.md-table-resize-popover {
    width: auto !important;
}

/* Footnote */

sup.md-footnote {
    background-color: var(--block-bg-color);
    color: var(--primary-color);
}

.md-def-name {
    color: var(--primary-color);
}

/*
 * Math Script 
 */

.md-inline-math script {
    color: var(--primary-color);
}

.md-rawblock-control:not(.md-rawblock-tooltip) {
    background: var(--bg-color);
    color: var(--md-char-color);
}


.code-tooltip {
    box-shadow: none;
}

.md-rawblock-tooltip.md-rawblock-control {
    border-radius: 1rem;
}

.md-rawblock .md-rawblock-tooltip {
    inset: auto 0.3rem auto auto;
    transform: translateY(-120%);
}

/* 
 * Comment
 */
.md-comment {
    color: #a8a8a9;
    opacity: 1;
    font-family: 'JetBrainsMono';
}

/*
 * Dividing line
 */
hr {
    margin-top: 20px;
    margin-bottom: 20px;
    border: 0;
    border-top: 2px solid #eef2f5;
    border-radius: 2px;
}

/* Checkbox */

#write input[type=checkbox] {
    width: 0;
}

.task-list-item input::before {
    content: "";
    display: inline-block;
    width: 1.0125rem;
    height: 1.0125rem;
    vertical-align: middle;
    text-align: center;
    border: 1px solid var(--marker-color);
    border-radius: 1.2rem;
    background-color: #fdfdfd;
    margin-left: -0.1rem;
    margin-right: 0.1rem;
    margin-top: -.6rem;
}

.task-list-item input:checked::before {
    content: '✓';
    font-weight: bold;
    -webkit-text-stroke: 1px var(--primary-color);
    color: var(--primary-color);
    background-color: var(--bg-color);
    font-size: 0.75rem;
    line-height: 0.8rem;
}

blockquote .task-list-item input::before {
    margin-top: .2rem;
}

/*
 * Sidebar
 */
#typora-sidebar {
    font-family: 'Cantarell', 'SourceHanSerifCN';
    height: 100%;
    color: var(--text-color);
    font-size: 0.92rem;
    background-color: var(--bg-color);
}

#sidebar-content.sidebar-content {
    margin-top: .5rem;
}

.html-for-mac #write input[type=checkbox] {
    margin-top: 0.65rem;
}

.html-for-mac #write .task-list-item input::before {
    margin-top: -.85rem;
}


/*
 * Sidebar - FileNode
 */

.active-tab-files #info-panel-tab-file .info-panel-tab-border,
.active-tab-outline #info-panel-tab-outline .info-panel-tab-border,
.ty-show-search #info-panel-tab-search .info-panel-tab-border {
    border-radius: 10px;
    height: 1px;
    background-color: var(--primary-color);
}

.file-node-content {
    color: var(--primary-color);
    line-height: 1.6rem;
}

span.file-node-title-name-part {
    color: var(--text-color);
}

span.file-node-title-ext-part {
    color: var(--text-color);
}

.file-node-icon {
    padding-right: 0.2rem;
}

.file-tree-node.active>.file-node-background {
    border-left: 4px solid var(--primary-color);
    border-color: var(--primary-color);
}

/*
 * Sidebar - Outline
 */

#outline-content {
    height: 100%;
    overflow-x: hidden;
    line-height: 1.6rem;
    font-size: .96rem;
}

#outline-content .outline-active,
.pin-outline .outline-active {
    color: var(--primary-color);
}

.outline-item {
    padding-left: 2em;
}

.outline-item>.outline-expander:before {
    transform: translateY(-1px) !important;
}

/* Meta Block */

pre.md-meta-block {
    font-family: 'JetBrainsMono';
    color: var(--primary-color);
    background: #f6f8fa;
    padding: 1.5rem;
    margin: -37px 0rem 3.8rem;
    /* border-radius: 1rem; */
    filter: drop-shadow(var(--img-shadow-color) 0px 3px 3px);
    /* border-top: 1px solid var(--primary-color); */
    /* border-bottom: 1px solid var(--primary-color); */
}

pre.md-fences-advanced.md-focus .md-fences-adv-panel {
    border-radius: .8rem;
}

/*
 * Scrollbar
 */

#outline-content::-webkit-scrollbar {
    width: .5rem;
}

#file-library::-webkit-scrollbar {
    width: .5rem;
}

::-webkit-scrollbar-track {
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background: rgba(179, 179, 179, 0.425);
}

::-webkit-scrollbar {
    width: 1rem;
}

/* 
 * Code Block - Style
 */

.md-fences:before {
    content: ' ';
    display: block;
    width: 100%;
    background-size: 40px;
    background-repeat: no-repeat;
    /* background-color: #282c34; */
    margin-bottom: -7px;
    border-radius: 5px;
    background-position: 10px 10px;
}

.CodeMirror-wrap .CodeMirror-scroll {
    overflow-x: auto;
}

.md-fences .cm-s-inner.CodeMirror {
    margin: 1.5rem 0;
}

.cm-s-inner.CodeMirror {
    padding: 1.2rem .8rem;
    color: #4f5467;
    font-family: 'JetBrainsMono';
    border-radius: 10px;
    background-color: var(--block-bg-color);
    /* border: 1px solid #eef2f5;*/
    line-height: 1.6rem;
}

.CodeMirror-gutters {
    border-right: 1px solid #a2b6d452;
    background: inherit;
    white-space: nowrap;
}

pre.CodeMirror-line {
    padding: 0 1.2rem;
}

.CodeMirror-linenumber {
    padding: 0 3px 0 5px;
    text-align: right;
    color: var(--primary-color);
}

/* 
 * Code Block - Color Scheme
 */

.cm-s-inner .cm-keyword {
    color: #1694b6 !important;
}

.cm-s-inner .cm-operator {
    color: #2f86d2 !important;
}

.cm-s-inner .cm-variable,
.cm-s-inner .cm-builtin,
.cm-s-inner .cm-header,
.cm-s-inner .cm-tag,
.cm-s-inner .cm-property,
.cm-s-inner .cm-quote {
    color: #b9218e !important;
}
/* ... */

